# festival-visitor-tracker-worker

./: .env.sample  .gitignore  Cargo.toml  README.md  biome.json  bun.lockb  drizzle.config.ts  flake.nix  lefthook.yml  package.json  rust-toolchain.toml  toolchain.nix  wrangler.toml
.github/workflows/: ci.yml
drizzle/meta/: 0000_snapshot.json
share/: README.md  bun.lockb  package.json
share/lib/: utils.ts
src/: app.ts  lib.rs
view/: .gitignore  bun.lockb  drizzle.config.ts  package.json  svelte.config.js  tailwind.config.ts  wrangler.toml
view/drizzle/meta/: 0000_snapshot.json  _journal.json
view/src/: schema.ts
view/src/components/: TotalVisits.svelte
view/src/components/charts/: Line.svelte  PieChart.svelte
view/src/db/: schema.ts
view/src/lib/: consts.ts  utils.test.ts  utils.ts
view/src/lib/server/db/: index.ts
view/src/pages/: Dashboard.svelte
view/src/routes/: +layout.svelte  +page.server.ts  +page.svelte  loaded.svelte
view/src/routes/sandbox/: +page.svelte  data.ts
view/src/routes/visits/: +server.ts
view/src/share/: schema.ts
worker/: .gitignore  README.md  bun.lockb  drizzle.config.ts  package.json  wrangler.toml
worker/drizzle/: 0000_parallel_texas_twister.sql
worker/drizzle/meta/: 0000_snapshot.json  _journal.json
worker/src/: app.ts  utils.ts
worker/src/db/: schema.ts
worker/src/share/: schema.ts
